# chili-clustering-benchmark

./: .gitignore  README.md  main.py  pyproject.toml
config/: experiments.yaml  pipeline.yaml
src/: algorithm_analysis.py  benchmark.py  clustering_models.py  config_loader.py  data_loader.py  data_summary.py  experiment_matrix.py  features.py  figures.py  final_ranking.py  interpretation.py  metrics.py  partition_equivalence.py  pipeline.py  preprocessing.py  ranking.py  reporting.py  stability.py
tests/: test_algorithm_analysis.py  test_benchmark.py  test_clustering_models.py  test_config_files.py  test_config_loader.py  test_data_loader.py  test_data_summary.py  test_environment.py  test_experiment_matrix.py  test_features.py  test_figures.py  test_final_ranking.py  test_final_ranking_config.py  test_interpretation.py  test_metrics.py  test_partition_equivalence.py  test_pipeline.py  test_preprocessing.py  test_ranking.py  test_reporting.py  test_stability.py  test_stability_config.py
